--- a/TabRESTMigrate/TabRESTMigrate.csproj
+++ b/TabRESTMigrate/TabRESTMigrate.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\ISalmre\Desktop\SV_Export\setup-here\</PublishUrl>
+    <PublishUrl>D:\araf\Projects\BSTFO\tabMigrate_intaller_for_Test\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -23,7 +23,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>14</ApplicationRevision>
+    <ApplicationRevision>18</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -66,7 +66,31 @@
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression.FileSystem" />
@@ -109,6 +133,8 @@
     <Compile Include="RESTRequests\SendDeleteDatasourceTag.cs" />
     <Compile Include="RESTRequests\SendDeleteWorkbookTag.cs" />
     <Compile Include="RESTHelpers\WorkbooksPublishSettings.cs" />
+    <Compile Include="ServerData\ImportSitesData.cs" />
+    <Compile Include="ServerData\SitesCredentials.cs" />
     <Compile Include="ServerData\IEditDataConnectionsSet.cs" />
     <Compile Include="ServerData\IHasSiteItemId.cs" />
     <Compile Include="ServerData\ITagSetInfo.cs" />
@@ -124,6 +150,7 @@
     <Compile Include="ServerData\SiteTagsSet.cs" />
     <Compile Include="ServerData\SiteDocumentBase.cs" />
     <Compile Include="ServerData\SiteUser_statics.cs" />
+    <Compile Include="SitesTaskManager.cs" />
     <Compile Include="TaskManager\CommandLineParser_static.cs" />
     <Compile Include="TaskManager\CommandLineParser.cs" />
     <Compile Include="FilesLogging\CsvDataGenerator.cs" />
@@ -135,6 +162,7 @@
     <Compile Include="RESTHelpers\DownloadListHelper.cs" />
     <Compile Include="TaskManager\KeepAliveBackgroundWebRequest.cs" />
     <Compile Include="TaskManager\KeepAliveBackgroundTaskBase.cs" />
+    <Compile Include="TaskManager\MultiTaskMaster.cs" />
     <Compile Include="TaskManager\TaskMaster_static.cs" />
     <Compile Include="RESTHelpers\TableauServerWebClient.cs">
       <SubType>Component</SubType>
@@ -200,6 +228,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
